--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -18,6 +18,7 @@
                         {% if site.steam %}<a class="social-btn" href="http://steamcommunity.com/id/{{ site.steam }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-steam-square"></i></a>{% endif %}
                         {% if site.youtube %}<a class="social-btn" href="https://youtube.com/user/{{ site.youtube }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-youtube-square"></i></a>{% endif %}
                         {% if site.youtube-channel %}<a class="social-btn" href="https://youtube.com/channel/{{ site.youtube-channel }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-youtube"></i></a>{% endif %}
+                        {% if site.skype %}<a class="social-btn" href="skype:{{ site.skype }}?call" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-skype"></i></a>{% endif %}
                         {% if site.soundcloud %}<a class="social-btn" href="http://soundcloud.com/{{ site.soundcloud }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-soundcloud"></i></a>{% endif %}
                         {% if site.weibo %}<a class="social-btn" href="http://www.weibo.com/{{ site.weibo }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-weibo"></i></a>{% endif %}
                         {% if site.flickr %}<a class="social-btn" href="http://www.flickr.com/{{ site.flickr }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-flickr"></i></a>{% endif %}
